Fix incremental blue green zero instances corner case